--- a/.gitignore
+++ b/.gitignore
@@ -1,129 +1,101 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
+# Dependencies
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# C extensions
-*.so
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
 
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-pip-wheel-metadata/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
+# Coverage directory used by tools like istanbul
+coverage/
+*.lcov
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
+# nyc test coverage
+.nyc_output
 
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
+# TypeScript cache
+*.tsbuildinfo
 
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
+# Optional npm cache directory
+.npm
 
-# Translations
-*.mo
-*.pot
+# Optional eslint cache
+.eslintcache
 
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
+# Optional stylelint cache
+.stylelintcache
 
-# Flask stuff:
-instance/
-.webassets-cache
+# Optional REPL history
+.node_repl_history
 
-# Scrapy stuff:
-.scrapy
+# Output of 'npm pack'
+*.tgz
 
-# Sphinx documentation
-docs/_build/
+# Yarn Integrity file
+.yarn-integrity
 
-# PyBuilder
-target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# IPython
-profile_default/
-ipython_config.py
-
-# pyenv
-.python-version
-
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
-
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow
-__pypackages__/
-
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
+# Environment variable files
 .env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
 
-# Spyder project settings
-.spyderproject
-.spyproject
+# Next.js build output
+.next/
+out/
 
-# Rope project settings
-.ropeproject
+# Build outputs
+dist/
+build/
 
-# mkdocs documentation
-/site
+# Cache directories
+.cache/
+.parcel-cache/
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
 
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
+# IDEs and editors
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
 
-# Pyre type checker
-.pyre/
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Logs
+logs
+*.log
+
+# Temporary folders
+tmp/
+temp/
+
+# Database files
+*.db
+*.sqlite
+*.sqlite3
+
+# Backup files
+*.bak
+*.backup
+*.old
+
+# Local development
+.local/
