--- a/backend/package.json
+++ b/backend/package.json
@@ -2,23 +2,32 @@
   "name": "nutrition-plan-backend",
   "version": "1.0.0",
   "description": "Backend API for Nutrition Plan application",
-  "main": "src/index.js",
+  "main": "src/index.ts",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
+    "start": "node src/index.ts",
+    "dev": "nodemon src/index.ts",
     "test": "jest"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "@google/generative-ai": "^0.2.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "@google/generative-ai": "^0.2.1"
+    "express": "^4.18.2"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
-    "jest": "^29.7.0"
+    "@types/express": "^5.0.3",
+    "@types/node": "^24.0.11",
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.10",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   },
-  "keywords": ["nutrition", "api", "express", "ai"],
+  "keywords": [
+    "nutrition",
+    "api",
+    "express",
+    "ai"
+  ],
   "author": "",
   "license": "MIT"
-} 
+}
